--- a/Frontend/requirements.txt
+++ b/Frontend/requirements.txt
@@ -1,4 +1,87 @@
-tensorflow-cpu==2.13.0
+absl-py==2.2.2
+altair==5.3.0
+astor==0.8.1
+astunparse==1.6.3
+attrs==25.3.0
+audioread==3.0.1
+base58==2.1.1
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.0.0
+colorama==0.4.6
+decorator==5.2.1
+flatbuffers==25.2.10
+gast==0.4.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-auth==2.39.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+grpcio==1.71.0
+h5py==3.13.0
+idna==3.10
+Jinja2==3.1.6
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+keras==2.13.1
+lazy_loader==0.4
+libclang==18.1.1
+librosa==0.11.0
+llvmlite==0.44.0
+Markdown==3.8
+MarkupSafe==3.0.2
+msgpack==1.1.0
+numba==0.61.2
 numpy==1.24.0
-streamlit==0.80.0
-librosa==0.8.0
+oauthlib==3.2.2
+opt_einsum==3.4.0
+packaging==24.2
+pandas==2.2.3
+pillow==11.2.1
+platformdirs==4.3.7
+pooch==1.8.2
+protobuf==3.20.3
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+pydeck==0.9.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+referencing==0.36.2
+requests==2.32.3
+requests-oauthlib==2.0.0
+resampy==0.4.3
+rpds-py==0.24.0
+rsa==4.9.1
+scikit-learn==1.6.1
+scipy==1.15.2
+six==1.17.0
+smmap==5.0.2
+soundfile==0.13.1
+soxr==0.5.0.post1
+streamlit==1.44.1
+tenacity==9.1.2
+tensorboard==2.13.0
+tensorboard-data-server==0.7.2
+tensorflow-cpu==2.13.0
+tensorflow-estimator==2.13.0
+tensorflow-intel==2.13.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==3.0.1
+threadpoolctl==3.6.0
+toml==0.10.2
+toolz==1.0.0
+tornado==6.4.2
+typing_extensions==4.5.0
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.4.0
+validators==0.34.0
+watchdog==6.0.0
+Werkzeug==3.1.3
+wrapt==1.17.2
